[package]
name = "ggrep"
version = "0.1.0"
edition = "2021"
authors = ["Fernando Paredes García <fernando@develcuy.com>"]
license = "MIT"
description = "A recursive grep-like CLI tool in Rust without shell glob limits."
repository = "https://github.com/DevElCuy/ggrep"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
walkdir = "2.3"
regex = "1.9"
ansi_term = "0.12"
atty = "0.2"
